--- a/sing-box@.service
+++ b/sing-box@.service
@@ -29,6 +29,7 @@ LogRateLimitIntervalSec=0
 
 ExecStartPre=/usr/bin/mkdir --parents /var/lib/sing-box/%i
 ExecStart=/usr/bin/sing-box run --config-directory /etc/sing-box/%i --directory /var/lib/sing-box/%i --disable-color
+ExecReload=/usr/bin/kill -HUP $MAINPID
 
 AmbientCapabilities=CAP_NET_BIND_SERVICE CAP_NET_ADMIN
 
